--- a/assignment 4 .ipynb
+++ b/assignment 4 .ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Find the Union of two Lists "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -36,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Check Whether a Number is Positive or Negative "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -57,6 +71,13 @@
     "    print(\"Zero\")\n",
     "else:\n",
     "    print(\"Negative number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Take in the Marks of 5 Subjects and Display the Grade "
    ]
   },
   {
@@ -97,6 +118,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Read Two Numbers and Print Their Quotient and Remainder "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -119,6 +147,13 @@
     "remainder=a%b\n",
     "print(\"Quotient is:\",quotient)\n",
     "print(\"Remainder is:\",remainder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Print all Integers that Aren’t Divisible by Either 2 or 3 and Lie between 1 and 50. "
    ]
   },
   {
@@ -157,6 +192,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Exchange the Values of Two Numbers Without Using a Temporary Variable "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -178,6 +220,13 @@
     "b=a-b\n",
     "a=a-b\n",
     "print(\"a is:\",a,\" b is:\",b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Find the Area of a Triangle Given All Three Sides "
    ]
   },
   {
@@ -204,6 +253,13 @@
     "s=(a+b+c)/2\n",
     "area=math.sqrt(s*(s-a)*(s-b)*(s-c))\n",
     "print(\"Area of the triangle is: \",round(area,2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Print Largest Even and Largest Odd Number in a List "
    ]
   },
   {
@@ -252,6 +308,13 @@
     "    count2=count2+1\n",
     "print(\"Largest even number:\",c[count1-1])\n",
     "print(\"Largest odd number\",d[count2-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write Python Program to Find the Second Largest Number in a List "
    ]
   },
   {
